fix: add overflow-hidden to body

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,7 +41,7 @@ html {
 }
 
 body {
-  @apply bg-white text-neutral-900 antialiased;
+  @apply bg-white text-neutral-900 antialiased overflow-hidden;
   font-family: theme('fontFamily.sans');
 }
 
